--- a/sass/components/_base.scss
+++ b/sass/components/_base.scss
@@ -6,3 +6,23 @@
 body {
   background: $heroBackground;
 }
+
+.center-container {
+  text-align: center;
+
+  /* The ghost, nudged to maintain perfect centering */
+  &:before {
+    content: '';
+    display: inline-block;
+    height: 100%;
+    vertical-align: middle;
+    margin-right: -0.25em; /* Adjusts for spacing */
+  }
+
+}
+
+.centered {
+  display: inline-block;
+  vertical-align: middle;
+  width: 100%;
+}
